# AC.PatchFix

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: dependabot.yml
.github/actions/setup-llvm/: action.yml
.github/workflows/: build.yml  release.yml
cmake/patches/: safetyhook-nt-protect.patch
cmake/toolchains/: msvc-wine-clang-cl.cmake
config/: AC.Rogue.PatchFix.ini  AC.Syndicate.PatchFix.ini
games/rogue/: game_entry.cpp  registry.cpp
games/rogue/hooks/: display_detection.cpp  fov_correction.cpp  fps_unlock.cpp  game_state.cpp  language_unlock.cpp  viewport_fitting.cpp  viewport_scaling.cpp
games/syndicate/: game_entry.cpp  registry.cpp
games/syndicate/hooks/: .clang-tidy  ds4v2_fix.cpp  fps_unlock.cpp  language_unlock.cpp  platform_specs_fix.cpp  prompt_override.cpp  resolution_fix.cpp
include/: logger.hpp
include/config/: enums.hpp
include/core/: logger.hpp  version.hpp  version.hpp.in
include/core/diagnostics/: address_registry.hpp  crash_handler.hpp  crash_logger.hpp  hook_context.hpp  patch_registry.hpp  seh_guard.hpp
include/core/hooks/registry/: config_base.hpp  hook_traits.hpp  ini_field.hpp  parsers.hpp  registry.hpp  registry_impl.hpp  validate.hpp
include/core/mem/: .clang-tidy  call.hpp  hook.hpp  protect.hpp  write.hpp  x64.hpp
include/core/patterns/: signatures.hpp
include/core/vmp/: integrity_bypass.hpp
include/core/vmp/detail/: pe_sections.hpp  thread_intercept.hpp
include/core/win32/: pe.hpp  string.hpp
include/diagnostics/: .clang-tidy  crash_journal.hpp  crash_report.hpp  minidump.hpp  patch_registry.hpp  seh_guard.hpp  stack_walker.hpp
include/games/: game_data.hpp  game_init.hpp  tags.hpp  variant.hpp
include/games/rogue/: game_data.hpp  language.hpp  registry.hpp  structs.hpp
include/games/rogue/hooks/: display_detection.hpp  fov_correction.hpp  fps_unlock.hpp  game_state.hpp  language_unlock.hpp  viewport_fitting.hpp  viewport_scaling.hpp
include/games/syndicate/: .clang-tidy  game_data.hpp  language.hpp  registry.hpp  structs.hpp
include/games/syndicate/hooks/: drift_fix.hpp  ds4v2_fix.hpp  fps_unlock.hpp  language_unlock.hpp  platform_specs_fix.hpp  prompt_override.hpp  refresh_rate_fix.hpp  resolution_fix.hpp
include/hooks/: tags.hpp
include/hooks/common/: display_detection.hpp  fov_correction.hpp  fps_unlock.hpp  game_state.hpp  viewport_fitting.hpp  viewport_scaling.hpp
include/hooks/registry/: all_hooks.hpp  config_base.hpp  hook_traits.hpp  parsers.hpp  registry.hpp  registry_impl.hpp  validate.hpp
include/mem/: call.hpp  hook.hpp  protect.hpp  write.hpp  x64.hpp
include/patterns/: signatures.hpp
include/util/: bitfield.hpp
include/vmp/: integrity_bypass.hpp
include/vmp/detail/: pe_sections.hpp  thread_intercept.hpp
include/win32/: pe.hpp  string.hpp
src/: dllmain.cpp  logger.cpp
src/config/: file_watcher.cpp
src/diagnostics/: .clang-tidy  address_registry.cpp  crash_handler.cpp  crash_journal.cpp  crash_logger.cpp  crash_report.cpp  hook_context.cpp  minidump.cpp  patch_registry.cpp  seh_guard.cpp  stack_walker.cpp
src/games/rogue/: game_entry.cpp  registry.cpp
src/games/rogue/hooks/: .clang-tidy  display_detection.cpp  fov_correction.cpp  fps_unlock.cpp  game_state.cpp  language_unlock.cpp  viewport_fitting.cpp  viewport_scaling.cpp
src/games/syndicate/: game_entry.cpp  registry.cpp
src/games/syndicate/hooks/: drift_fix.cpp  ds4v2_fix.cpp  fps_unlock.cpp  language_unlock.cpp  platform_specs_fix.cpp  prompt_override.cpp  refresh_rate_fix.cpp  resolution_fix.cpp
src/hooks/: fps_unlock.cpp
src/mem/: hook.cpp  protect.cpp
src/patterns/: signatures.cpp
src/vmp/: .clang-tidy  integrity_bypass.cpp  pe_sections.cpp
src/win32/: .clang-tidy  pe.cpp
tests/: .clang-tidy  CMakeLists.txt  test_ini_field.cpp  test_parsers.cpp  test_topo_sort.cpp
